<resources>
    <string name="app_name">Crypto Tracker</string>
    <string name="price_usd">00.00</string>
    <string name="OneHour">1hr:</string>
    <string name="OneHourPercentage">0.00%</string>
    <string name="TwentyFourHour">24hr:</string>
    <string name="TwentyFourHourPercentage">0.00%</string>
    <string name="SevenDays">7d:</string>
    <string name="SevenDayPercentage">0.00%</string>
    <string name="initialText">Invertido:</string>
    <string name="initial">0.00</string>
    <string name="actualText">Actual:</string>
    <string name="actual">0.00</string>
    <string name="price_string" formatted="true">%s%%</string>
    <string name="search">Search</string>
    <string name="investmentTV">Inversion inicial</string>
    <string name="quantityTV">Cantidad de cripto</string>
</resources>