<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/containerLayout"
    android:onClick="openDialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/coinIcon"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/coinSymbol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="BTC"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintStart_toEndOf="@+id/coinIcon"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/coinDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="|"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintStart_toEndOf="@+id/coinSymbol"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/coinName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="Bitcoin"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintStart_toEndOf="@+id/coinDivider"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/dollarSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:text="$"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintEnd_toStartOf="@+id/priceUsdText"
        android:layout_marginRight="4dp" />

    <TextView
        android:id="@+id/priceUsdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/price_usd"
        app:layout_constraintBottom_toBottomOf="@+id/coinIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/oneHourText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/OneHour"
        app:layout_constraintStart_toEndOf="@+id/coinIcon"
        app:layout_constraintTop_toBottomOf="@+id/coinIcon" />

    <TextView
        android:id="@+id/percentChange1hText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/OneHourPercentage"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/oneHourText"
        app:layout_constraintTop_toBottomOf="@+id/coinIcon"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/twentyFourHoursText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/TwentyFourHour"
        app:layout_constraintStart_toEndOf="@+id/percentChange1hText"
        app:layout_constraintTop_toBottomOf="@+id/coinIcon"
        android:layout_marginLeft="36dp" />

    <TextView
        android:id="@+id/percentChange24hText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/TwentyFourHourPercentage"
        app:layout_constraintStart_toEndOf="@+id/twentyFourHoursText"
        app:layout_constraintTop_toBottomOf="@+id/coinIcon"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/daysText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/SevenDays"
        app:layout_constraintEnd_toStartOf="@+id/percentChange7dayText"
        app:layout_constraintTop_toBottomOf="@+id/coinIcon"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/percentChange7dayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/SevenDayPercentage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coinIcon"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/initialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/initialText"
        app:layout_constraintStart_toEndOf="@+id/coinIcon"
        app:layout_constraintTop_toBottomOf="@+id/coinIcon" />

    <TextView
        android:id="@+id/dollarSign2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="$"
        app:layout_constraintStart_toEndOf="@+id/oneHourText"
        app:layout_constraintTop_toBottomOf="@+id/coinIcon"
        android:layout_marginLeft="40dp" />

    <TextView
        android:id="@+id/initial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/initial"
        app:layout_constraintStart_toEndOf="@+id/oneHourText"
        app:layout_constraintTop_toBottomOf="@+id/coinIcon"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/actualText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:text="@string/actualText"
        app:layout_constraintStart_toEndOf="@+id/percentChange1hText"
        app:layout_constraintTop_toBottomOf="@+id/coinIcon"
        android:layout_marginLeft="36dp" />

    <TextView
        android:id="@+id/dollarSign3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:text="$"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/percentChange1hText"
        app:layout_constraintTop_toBottomOf="@+id/coinIcon"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/actual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="32dp"
        android:text="@string/actual"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/twentyFourHoursText"
        app:layout_constraintTop_toBottomOf="@+id/coinIcon"
        android:layout_marginLeft="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>